chore(deps): upgrade claude-code dependency to v2.0.14

--- a/tweakcc/config_1.json
+++ b/tweakcc/config_1.json
@@ -1,7 +1,7 @@
 {
   "ccVersion": "2.0.14",
   "ccInstallationDir": "/Users/tim/.volta/tools/image/packages/@anthropic-ai/claude-code/lib/node_modules/@anthropic-ai/claude-code/",
-  "lastModified": "2025-10-13T09:50:20.990Z",
+  "lastModified": "2025-10-13T09:35:35.462Z",
   "changesApplied": true,
   "settings": {
     "themes": [
@@ -13,25 +13,18 @@
           "bashBorder": "rgb(253,93,177)",
           "claude": "rgb(215,119,87)",
           "claudeShimmer": "rgb(235,159,127)",
-          "claudeBlue_FOR_SYSTEM_SPINNER": "rgb(147,165,255)",
-          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "rgb(177,195,255)",
           "permission": "rgb(177,185,249)",
-          "permissionShimmer": "rgb(207,215,255)",
           "planMode": "rgb(72,150,140)",
           "ide": "rgb(71,130,200)",
-          "promptBorder": "rgb(136,136,136)",
-          "promptBorderShimmer": "rgb(166,166,166)",
+          "secondaryBorder": "rgb(136,136,136)",
           "text": "rgb(255,255,255)",
           "inverseText": "rgb(0,0,0)",
-          "inactive": "rgb(153,153,153)",
-          "subtle": "rgb(80,80,80)",
+          "secondaryText": "rgb(153,153,153)",
           "suggestion": "rgb(177,185,249)",
           "remember": "rgb(177,185,249)",
-          "background": "rgb(0,204,204)",
           "success": "rgb(78,186,101)",
           "error": "rgb(255,107,128)",
           "warning": "rgb(255,193,7)",
-          "warningShimmer": "rgb(255,223,57)",
           "diffAdded": "rgb(34,92,43)",
           "diffRemoved": "rgb(122,41,54)",
           "diffAddedDimmed": "rgb(71,88,74)",
@@ -48,6 +41,15 @@
           "orange_FOR_SUBAGENTS_ONLY": "rgb(234,88,12)",
           "pink_FOR_SUBAGENTS_ONLY": "rgb(219,39,119)",
           "cyan_FOR_SUBAGENTS_ONLY": "rgb(8,145,178)",
+          "claudeBlue_FOR_SYSTEM_SPINNER": "rgb(147,165,255)",
+          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "rgb(177,195,255)",
+          "permissionShimmer": "rgb(207,215,255)",
+          "promptBorder": "rgb(136,136,136)",
+          "promptBorderShimmer": "rgb(166,166,166)",
+          "inactive": "rgb(153,153,153)",
+          "subtle": "rgb(80,80,80)",
+          "background": "rgb(0,204,204)",
+          "warningShimmer": "rgb(255,223,57)",
           "professionalBlue": "rgb(106,155,204)",
           "rainbow_red": "rgb(235,95,87)",
           "rainbow_orange": "rgb(245,139,87)",
@@ -80,25 +82,18 @@
           "bashBorder": "rgb(255,0,135)",
           "claude": "rgb(215,119,87)",
           "claudeShimmer": "rgb(245,149,117)",
-          "claudeBlue_FOR_SYSTEM_SPINNER": "rgb(87,105,247)",
-          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "rgb(117,135,255)",
           "permission": "rgb(87,105,247)",
-          "permissionShimmer": "rgb(137,155,255)",
           "planMode": "rgb(0,102,102)",
           "ide": "rgb(71,130,200)",
-          "promptBorder": "rgb(153,153,153)",
-          "promptBorderShimmer": "rgb(183,183,183)",
+          "secondaryBorder": "rgb(153,153,153)",
           "text": "rgb(0,0,0)",
           "inverseText": "rgb(255,255,255)",
-          "inactive": "rgb(102,102,102)",
-          "subtle": "rgb(175,175,175)",
+          "secondaryText": "rgb(102,102,102)",
           "suggestion": "rgb(87,105,247)",
           "remember": "rgb(0,0,255)",
-          "background": "rgb(0,153,153)",
           "success": "rgb(44,122,57)",
           "error": "rgb(171,43,63)",
           "warning": "rgb(150,108,30)",
-          "warningShimmer": "rgb(200,158,80)",
           "diffAdded": "rgb(105,219,124)",
           "diffRemoved": "rgb(255,168,180)",
           "diffAddedDimmed": "rgb(199,225,203)",
@@ -115,6 +110,15 @@
           "orange_FOR_SUBAGENTS_ONLY": "rgb(234,88,12)",
           "pink_FOR_SUBAGENTS_ONLY": "rgb(219,39,119)",
           "cyan_FOR_SUBAGENTS_ONLY": "rgb(8,145,178)",
+          "claudeBlue_FOR_SYSTEM_SPINNER": "rgb(87,105,247)",
+          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "rgb(117,135,255)",
+          "permissionShimmer": "rgb(137,155,255)",
+          "promptBorder": "rgb(153,153,153)",
+          "promptBorderShimmer": "rgb(183,183,183)",
+          "inactive": "rgb(102,102,102)",
+          "subtle": "rgb(175,175,175)",
+          "background": "rgb(0,153,153)",
+          "warningShimmer": "rgb(200,158,80)",
           "professionalBlue": "rgb(106,155,204)",
           "rainbow_red": "rgb(235,95,87)",
           "rainbow_orange": "rgb(245,139,87)",
@@ -143,45 +147,47 @@
         "name": "Light mode (ANSI colors only)",
         "id": "light-ansi",
         "colors": {
-          "autoAccept": "ansi:magenta",
-          "bashBorder": "ansi:magenta",
-          "claude": "ansi:redBright",
-          "claudeShimmer": "ansi:yellowBright",
+          "autoAccept": "#cd00cd",
+          "bashBorder": "#cd00cd",
+          "claude": "#cdcd00",
+          "claudeShimmer": "#ffff00",
+          "permission": "#0000ee",
+          "planMode": "#00cdcd",
+          "ide": "#4782C8",
+          "secondaryBorder": "#e5e5e5",
+          "text": "#000000",
+          "inverseText": "#ffffff",
+          "secondaryText": "#7f7f7f",
+          "suggestion": "#0000ee",
+          "remember": "#0000ee",
+          "success": "#00cd00",
+          "error": "#cd0000",
+          "warning": "#cdcd00",
+          "diffAdded": "#00cd00",
+          "diffRemoved": "#cd0000",
+          "diffAddedDimmed": "#00cd00",
+          "diffRemovedDimmed": "#cd0000",
+          "diffAddedWord": "#00ff00",
+          "diffRemovedWord": "#ff0000",
+          "diffAddedWordDimmed": "#00cd00",
+          "diffRemovedWordDimmed": "#cd0000",
+          "red_FOR_SUBAGENTS_ONLY": "#cd0000",
+          "blue_FOR_SUBAGENTS_ONLY": "#0000cd",
+          "green_FOR_SUBAGENTS_ONLY": "#00cd00",
+          "yellow_FOR_SUBAGENTS_ONLY": "#cdcd00",
+          "purple_FOR_SUBAGENTS_ONLY": "#cd00cd",
+          "orange_FOR_SUBAGENTS_ONLY": "#cd8500",
+          "pink_FOR_SUBAGENTS_ONLY": "#ff1493",
+          "cyan_FOR_SUBAGENTS_ONLY": "#00cdcd",
           "claudeBlue_FOR_SYSTEM_SPINNER": "ansi:blue",
           "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "ansi:blueBright",
-          "permission": "ansi:blue",
           "permissionShimmer": "ansi:blueBright",
-          "planMode": "ansi:cyan",
-          "ide": "ansi:blueBright",
           "promptBorder": "ansi:white",
           "promptBorderShimmer": "ansi:whiteBright",
-          "text": "ansi:black",
-          "inverseText": "ansi:white",
           "inactive": "ansi:blackBright",
           "subtle": "ansi:blackBright",
-          "suggestion": "ansi:blue",
-          "remember": "ansi:blue",
           "background": "ansi:cyan",
-          "success": "ansi:green",
-          "error": "ansi:red",
-          "warning": "ansi:yellow",
           "warningShimmer": "ansi:yellowBright",
-          "diffAdded": "ansi:green",
-          "diffRemoved": "ansi:red",
-          "diffAddedDimmed": "ansi:green",
-          "diffRemovedDimmed": "ansi:red",
-          "diffAddedWord": "ansi:greenBright",
-          "diffRemovedWord": "ansi:redBright",
-          "diffAddedWordDimmed": "ansi:green",
-          "diffRemovedWordDimmed": "ansi:red",
-          "red_FOR_SUBAGENTS_ONLY": "ansi:red",
-          "blue_FOR_SUBAGENTS_ONLY": "ansi:blue",
-          "green_FOR_SUBAGENTS_ONLY": "ansi:green",
-          "yellow_FOR_SUBAGENTS_ONLY": "ansi:yellow",
-          "purple_FOR_SUBAGENTS_ONLY": "ansi:magenta",
-          "orange_FOR_SUBAGENTS_ONLY": "ansi:redBright",
-          "pink_FOR_SUBAGENTS_ONLY": "ansi:magentaBright",
-          "cyan_FOR_SUBAGENTS_ONLY": "ansi:cyan",
           "professionalBlue": "ansi:blueBright",
           "rainbow_red": "ansi:red",
           "rainbow_orange": "ansi:redBright",
@@ -210,45 +216,47 @@
         "name": "Dark mode (ANSI colors only)",
         "id": "dark-ansi",
         "colors": {
-          "autoAccept": "ansi:magentaBright",
-          "bashBorder": "ansi:magentaBright",
-          "claude": "ansi:redBright",
-          "claudeShimmer": "ansi:yellowBright",
+          "autoAccept": "#ff00ff",
+          "bashBorder": "#ff00ff",
+          "claude": "#cdcd00",
+          "claudeShimmer": "#ffff00",
+          "permission": "#5c5cff",
+          "planMode": "#00ffff",
+          "ide": "#4782c8",
+          "secondaryBorder": "#e5e5e5",
+          "text": "#ffffff",
+          "inverseText": "#000000",
+          "secondaryText": "#e5e5e5",
+          "suggestion": "#5c5cff",
+          "remember": "#5c5cff",
+          "success": "#00ff00",
+          "error": "#ff0000",
+          "warning": "#ffff00",
+          "diffAdded": "#00cd00",
+          "diffRemoved": "#cd0000",
+          "diffAddedDimmed": "#00cd00",
+          "diffRemovedDimmed": "#cd0000",
+          "diffAddedWord": "#00ff00",
+          "diffRemovedWord": "#ff0000",
+          "diffAddedWordDimmed": "#00cd00",
+          "diffRemovedWordDimmed": "#cd0000",
+          "red_FOR_SUBAGENTS_ONLY": "#ff0000",
+          "blue_FOR_SUBAGENTS_ONLY": "#0000ff",
+          "green_FOR_SUBAGENTS_ONLY": "#00ff00",
+          "yellow_FOR_SUBAGENTS_ONLY": "#ffff00",
+          "purple_FOR_SUBAGENTS_ONLY": "#ff00ff",
+          "orange_FOR_SUBAGENTS_ONLY": "#ff8700",
+          "pink_FOR_SUBAGENTS_ONLY": "#ff69b4",
+          "cyan_FOR_SUBAGENTS_ONLY": "#00ffff",
           "claudeBlue_FOR_SYSTEM_SPINNER": "ansi:blueBright",
           "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "ansi:blueBright",
-          "permission": "ansi:blueBright",
           "permissionShimmer": "ansi:blueBright",
-          "planMode": "ansi:cyanBright",
-          "ide": "ansi:blue",
           "promptBorder": "ansi:white",
           "promptBorderShimmer": "ansi:whiteBright",
-          "text": "ansi:whiteBright",
-          "inverseText": "ansi:black",
           "inactive": "ansi:white",
           "subtle": "ansi:white",
-          "suggestion": "ansi:blueBright",
-          "remember": "ansi:blueBright",
           "background": "ansi:cyanBright",
-          "success": "ansi:greenBright",
-          "error": "ansi:redBright",
-          "warning": "ansi:yellowBright",
           "warningShimmer": "ansi:yellowBright",
-          "diffAdded": "ansi:green",
-          "diffRemoved": "ansi:red",
-          "diffAddedDimmed": "ansi:green",
-          "diffRemovedDimmed": "ansi:red",
-          "diffAddedWord": "ansi:greenBright",
-          "diffRemovedWord": "ansi:redBright",
-          "diffAddedWordDimmed": "ansi:green",
-          "diffRemovedWordDimmed": "ansi:red",
-          "red_FOR_SUBAGENTS_ONLY": "ansi:redBright",
-          "blue_FOR_SUBAGENTS_ONLY": "ansi:blueBright",
-          "green_FOR_SUBAGENTS_ONLY": "ansi:greenBright",
-          "yellow_FOR_SUBAGENTS_ONLY": "ansi:yellowBright",
-          "purple_FOR_SUBAGENTS_ONLY": "ansi:magentaBright",
-          "orange_FOR_SUBAGENTS_ONLY": "ansi:redBright",
-          "pink_FOR_SUBAGENTS_ONLY": "ansi:magentaBright",
-          "cyan_FOR_SUBAGENTS_ONLY": "ansi:cyanBright",
           "professionalBlue": "rgb(106,155,204)",
           "rainbow_red": "ansi:red",
           "rainbow_orange": "ansi:redBright",
@@ -281,25 +289,18 @@
           "bashBorder": "rgb(0,102,204)",
           "claude": "rgb(255,153,51)",
           "claudeShimmer": "rgb(255,183,101)",
-          "claudeBlue_FOR_SYSTEM_SPINNER": "rgb(51,102,255)",
-          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "rgb(101,152,255)",
           "permission": "rgb(51,102,255)",
-          "permissionShimmer": "rgb(101,152,255)",
           "planMode": "rgb(51,102,102)",
           "ide": "rgb(71,130,200)",
-          "promptBorder": "rgb(153,153,153)",
-          "promptBorderShimmer": "rgb(183,183,183)",
+          "secondaryBorder": "rgb(153,153,153)",
           "text": "rgb(0,0,0)",
           "inverseText": "rgb(255,255,255)",
-          "inactive": "rgb(102,102,102)",
-          "subtle": "rgb(175,175,175)",
+          "secondaryText": "rgb(102,102,102)",
           "suggestion": "rgb(51,102,255)",
           "remember": "rgb(51,102,255)",
-          "background": "rgb(0,153,153)",
           "success": "rgb(0,102,153)",
           "error": "rgb(204,0,0)",
           "warning": "rgb(255,153,0)",
-          "warningShimmer": "rgb(255,183,50)",
           "diffAdded": "rgb(153,204,255)",
           "diffRemoved": "rgb(255,204,204)",
           "diffAddedDimmed": "rgb(209,231,253)",
@@ -316,6 +317,15 @@
           "orange_FOR_SUBAGENTS_ONLY": "rgb(255,128,0)",
           "pink_FOR_SUBAGENTS_ONLY": "rgb(255,102,178)",
           "cyan_FOR_SUBAGENTS_ONLY": "rgb(0,178,178)",
+          "claudeBlue_FOR_SYSTEM_SPINNER": "rgb(51,102,255)",
+          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "rgb(101,152,255)",
+          "permissionShimmer": "rgb(101,152,255)",
+          "promptBorder": "rgb(153,153,153)",
+          "promptBorderShimmer": "rgb(183,183,183)",
+          "inactive": "rgb(102,102,102)",
+          "subtle": "rgb(175,175,175)",
+          "background": "rgb(0,153,153)",
+          "warningShimmer": "rgb(255,183,50)",
           "professionalBlue": "rgb(106,155,204)",
           "rainbow_red": "rgb(235,95,87)",
           "rainbow_orange": "rgb(245,139,87)",
@@ -348,25 +358,18 @@
           "bashBorder": "rgb(51,153,255)",
           "claude": "rgb(255,153,51)",
           "claudeShimmer": "rgb(255,183,101)",
-          "claudeBlue_FOR_SYSTEM_SPINNER": "rgb(153,204,255)",
-          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "rgb(183,224,255)",
           "permission": "rgb(153,204,255)",
-          "permissionShimmer": "rgb(183,224,255)",
           "planMode": "rgb(102,153,153)",
           "ide": "rgb(71,130,200)",
-          "promptBorder": "rgb(136,136,136)",
-          "promptBorderShimmer": "rgb(166,166,166)",
+          "secondaryBorder": "rgb(136,136,136)",
           "text": "rgb(255,255,255)",
           "inverseText": "rgb(0,0,0)",
-          "inactive": "rgb(153,153,153)",
-          "subtle": "rgb(80,80,80)",
+          "secondaryText": "rgb(153,153,153)",
           "suggestion": "rgb(153,204,255)",
           "remember": "rgb(153,204,255)",
-          "background": "rgb(0,204,204)",
           "success": "rgb(51,153,255)",
           "error": "rgb(255,102,102)",
           "warning": "rgb(255,204,0)",
-          "warningShimmer": "rgb(255,234,50)",
           "diffAdded": "rgb(0,68,102)",
           "diffRemoved": "rgb(102,0,0)",
           "diffAddedDimmed": "rgb(62,81,91)",
@@ -383,6 +386,15 @@
           "orange_FOR_SUBAGENTS_ONLY": "rgb(255,178,102)",
           "pink_FOR_SUBAGENTS_ONLY": "rgb(255,153,204)",
           "cyan_FOR_SUBAGENTS_ONLY": "rgb(102,204,204)",
+          "claudeBlue_FOR_SYSTEM_SPINNER": "rgb(153,204,255)",
+          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "rgb(183,224,255)",
+          "permissionShimmer": "rgb(183,224,255)",
+          "promptBorder": "rgb(136,136,136)",
+          "promptBorderShimmer": "rgb(166,166,166)",
+          "inactive": "rgb(153,153,153)",
+          "subtle": "rgb(80,80,80)",
+          "background": "rgb(0,204,204)",
+          "warningShimmer": "rgb(255,234,50)",
           "professionalBlue": "rgb(106,155,204)",
           "rainbow_red": "rgb(235,95,87)",
           "rainbow_orange": "rgb(245,139,87)",
@@ -415,25 +427,18 @@
           "bashBorder": "#A3BE8C",
           "claude": "rgb(143,188,187)",
           "claudeShimmer": "#8FBCBB",
-          "claudeBlue_FOR_SYSTEM_SPINNER": "#5E81AC",
-          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "#81A1C1",
           "permission": "#5E81AC",
-          "permissionShimmer": "#81A1C1",
           "planMode": "#88C0D0",
           "ide": "#88C0D0",
-          "promptBorder": "#434C5E",
-          "promptBorderShimmer": "#4C566A",
+          "secondaryBorder": "#434C5E",
           "text": "#ECEFF4",
           "inverseText": "#2E3440",
-          "inactive": "#D8DEE9",
-          "subtle": "#4C566A",
+          "secondaryText": "#D8DEE9",
           "suggestion": "#88C0D0",
           "remember": "#B48EAD",
-          "background": "#88C0D0",
           "success": "#A3BE8C",
           "error": "#BF616A",
           "warning": "#EBCB8B",
-          "warningShimmer": "#F0D49B",
           "diffAdded": "#3D4A42",
           "diffRemoved": "#4A3D3F",
           "diffAddedDimmed": "#333A35",
@@ -450,6 +455,15 @@
           "orange_FOR_SUBAGENTS_ONLY": "#D08770",
           "pink_FOR_SUBAGENTS_ONLY": "#B48EAD",
           "cyan_FOR_SUBAGENTS_ONLY": "#88C0D0",
+          "claudeBlue_FOR_SYSTEM_SPINNER": "#5E81AC",
+          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "#81A1C1",
+          "permissionShimmer": "#81A1C1",
+          "promptBorder": "#434C5E",
+          "promptBorderShimmer": "#4C566A",
+          "inactive": "#D8DEE9",
+          "subtle": "#4C566A",
+          "background": "#88C0D0",
+          "warningShimmer": "#F0D49B",
           "professionalBlue": "#81A1C1",
           "rainbow_red": "#BF616A",
           "rainbow_orange": "#D08770",
@@ -476,7 +490,7 @@
       }
     ],
     "launchText": {
-      "method": "custom",
+      "method": "figlet",
       "figletText": "Claude Code",
       "figletFont": "ANSI Shadow",
       "customText": ""
@@ -722,7 +736,7 @@
       ]
     },
     "thinkingStyle": {
-      "updateInterval": 140,
+      "updateInterval": 120,
       "phases": [
         "◐",
         "◓",
@@ -735,14 +749,14 @@
       "prefix": {
         "format": ">",
         "styling": [],
-        "foreground_color": "rgb(0,0,0)",
-        "background_color": "rgb(0,0,0)"
+        "foreground_color": "#88C0D0",
+        "background_color": "#2E3440"
       },
       "message": {
         "format": "{}",
         "styling": [],
-        "foreground_color": "rgb(0,0,0)",
-        "background_color": "rgb(0,0,0)"
+        "foreground_color": "#ECEFF4",
+        "background_color": "#2E3440"
       }
     },
     "inputBox": {
