chore(config): update claude abbreviations and kitty keybindings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,24 +3,27 @@ include ./nord.conf
 allow_remote_control yes
 allow_unsafe_paste yes
 
-# ==== Font size ====
+# ==== font size ====
 map cmd+equal change_font_size all +2.0
-map cmd+plus  change_font_size all +2.0   # русская раскладка (= на +)
+map cmd+plus  change_font_size all +2.0   # ru layout (= to +)
 map cmd+minus change_font_size all -2.0
 map cmd+0 change_font_size all 0
 
-# ==== Clipboard ====
+# ==== hack for claude code ====
+map shift+enter send_text all \n
+
+# ==== clipboard ====
 map cmd+c copy_to_clipboard
 map cmd+с copy_to_clipboard
 
 map cmd+v paste_from_clipboard
 map cmd+м paste_from_clipboard
 
-# ==== Special ====
+# ==== special ====
 map ctrl+enter send_text all "\x1b[13;5u"
 
 map cmd+w noop
-map cmd+ц noop   # русская "ц"
+map cmd+ц noop
 
 # ==== tmux passthrough ====
 map cmd+t send_key f1
