feat(kitty): change tmux pane close shortcut to Cmd-w
- Change Cmd-q to Cmd-w for consistency with macOS standards
- Update Russian layout binding from Cmd-й to Cmd-ц
- Aligns with qutebrowser tab close behavior

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -29,8 +29,8 @@ map cmd+ц noop
 map cmd+t send_key f1
 map cmd+е send_key f1
 
-map cmd+q send_key f2
-map cmd+й send_key f2
+map cmd+w send_key f2
+map cmd+ц send_key f2
 
 # map cmd+a send_key f3
 # map cmd+ф send_key f3
