--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -22,8 +22,8 @@ map cmd+м paste_from_clipboard
 # ==== special ====
 map ctrl+enter send_text all "\x1b[13;5u"
 
-map cmd+w noop
-map cmd+ц noop
+map cmd+q noop
+map cmd+й noop
 
 # ==== tmux passthrough ====
 map cmd+t send_key f1
@@ -955,7 +955,7 @@ copy_on_select yes
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations titlebar-and-corners # or yes
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
