feat(tmux): add middle mouse button to close windows on status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -177,6 +177,7 @@ bind-key -T copy-mode-vi MouseDown1Pane select-pane -t= \; if-shell -F "#{pane_i
 # Allow clicking on status line tabs to switch windows while in copy mode
 bind-key -T copy-mode-vi MouseDown1Status select-window -t=
 bind-key -T copy-mode-vi MouseDown3Status select-window -t=
+bind-key -T copy-mode-vi MouseUp2Status kill-window -t=
 
 # Ensure clicks on status line switch windows outside copy mode as well
 unbind-key -n MouseDown1Status
@@ -189,6 +190,9 @@ bind-key -n MouseDown3Status select-window -t=
 bind-key -n MouseUp1Status select-window -t=
 bind-key -n MouseUp3Status select-window -t=
 bind-key -n MouseDrag1Status select-window -t=
+
+# Middle mouse button on status line closes window (like browser tabs)
+bind-key -n MouseUp2Status kill-window -t=
 
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-selection
