--- a/mcpproxy/.gitignore
+++ b/mcpproxy/.gitignore
@@ -14,6 +14,9 @@ index.bleve/
 *.log
 main.log*
 
-# Note: mcp_config.json is committed but contains api_key.
-# This is the local mcpproxy API key, not a sensitive external token.
+# Backup files
+*.backup
+
+# Note: mcp_config.json is committed but api_key should be removed before commit.
+# Use fix-mcpproxy.sh --remove-api-key to clean it.
 # Sensitive tokens are stored via keyring (${keyring:...}) and not committed.
