--- a/mcpproxy/mcp_config.json
+++ b/mcpproxy/mcp_config.json
@@ -3,6 +3,7 @@
   "data_dir": "/Users/tim/.mcpproxy",
   "enable_tray": true,
   "debug_search": false,
+  "api_key": "",
   "mcpServers": [
     {
       "name": "activitywatch",
