fix(tmux): disable focus-events to prevent [O and [I characters
The focus-events option was causing escape sequences to appear as
literal text when switching windows/tabs in tmux. These sequences
([O on focus out, [I on focus in) should be handled by applications
but were appearing as raw text in shells.

Modern neovim versions work correctly without focus-events enabled.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,7 +91,9 @@ set -g default-terminal "xterm-kitty"
 set -ga terminal-overrides ",xterm-kitty:Tc"
 
 # Apparently helps with nvim compatibility; not sure why this is needed
-set -g focus-events on
+# Disabled: causes [O and [I characters to appear when switching windows
+# Modern nvim versions work fine without this option
+set -g focus-events off
 
 # Helps with hitting escape key lag in vim
 set -sg escape-time 0 # or maybe 10
