fix(kitty): disable focus reporting to prevent [O and [I characters
Disable focus events in Kitty terminal to prevent escape sequences
from appearing when switching between applications with Ctrl+Tab.
The enable_focus_reporting option prevents Kitty from sending focus
in/out escape sequences to terminal applications.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,9 @@ include ./nord.conf
 allow_remote_control yes
 allow_unsafe_paste yes
 
+# Disable focus events to prevent [O and [I characters when switching apps
+enable_focus_reporting no
+
 # ==== font size ====
 map cmd+equal change_font_size all +2.0
 map cmd+plus  change_font_size all +2.0   # ru layout (= to +)
