--- a/tweakcc/config.json
+++ b/tweakcc/config.json
@@ -1,7 +1,7 @@
 {
-  "ccVersion": "2.0.25",
+  "ccVersion": "2.0.27",
   "ccInstallationDir": "/Users/tim/.volta/tools/image/packages/@anthropic-ai/claude-code/lib/node_modules/@anthropic-ai/claude-code/",
-  "lastModified": "2025-10-22T07:00:27.761Z",
+  "lastModified": "2025-10-26T19:34:57.124Z",
   "changesApplied": true,
   "settings": {
     "themes": [
@@ -70,6 +70,75 @@
           "memoryBackgroundColor": "rgb(55, 65, 70)",
           "rate_limit_fill": "rgb(177,185,249)",
           "rate_limit_empty": "rgb(80,83,112)"
+        }
+      },
+      {
+        "name": "Nord",
+        "id": "nord",
+        "colors": {
+          "autoAccept": "#D08770",
+          "bashBorder": "#A3BE8C",
+          "claude": "rgb(143,188,187)",
+          "claudeShimmer": "#8FBCBB",
+          "permission": "#5E81AC",
+          "planMode": "#88C0D0",
+          "ide": "#88C0D0",
+          "secondaryBorder": "#434C5E",
+          "text": "#ECEFF4",
+          "inverseText": "#2E3440",
+          "secondaryText": "#D8DEE9",
+          "suggestion": "#88C0D0",
+          "remember": "#B48EAD",
+          "success": "#A3BE8C",
+          "error": "#BF616A",
+          "warning": "#EBCB8B",
+          "diffAdded": "#3D4A42",
+          "diffRemoved": "#4A3D3F",
+          "diffAddedDimmed": "#333A35",
+          "diffRemovedDimmed": "#3A3335",
+          "diffAddedWord": "rgb(128,165,95)",
+          "diffRemovedWord": "#BF616A",
+          "diffAddedWordDimmed": "rgb(108,167,166)",
+          "diffRemovedWordDimmed": "rgb(201,116,89)",
+          "red_FOR_SUBAGENTS_ONLY": "#BF616A",
+          "blue_FOR_SUBAGENTS_ONLY": "#5E81AC",
+          "green_FOR_SUBAGENTS_ONLY": "#A3BE8C",
+          "yellow_FOR_SUBAGENTS_ONLY": "#EBCB8B",
+          "purple_FOR_SUBAGENTS_ONLY": "#B48EAD",
+          "orange_FOR_SUBAGENTS_ONLY": "#D08770",
+          "pink_FOR_SUBAGENTS_ONLY": "#B48EAD",
+          "cyan_FOR_SUBAGENTS_ONLY": "#88C0D0",
+          "claudeBlue_FOR_SYSTEM_SPINNER": "#5E81AC",
+          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "#81A1C1",
+          "permissionShimmer": "#81A1C1",
+          "promptBorder": "#434C5E",
+          "promptBorderShimmer": "#4C566A",
+          "inactive": "#D8DEE9",
+          "subtle": "#4C566A",
+          "background": "#88C0D0",
+          "warningShimmer": "#F0D49B",
+          "professionalBlue": "#81A1C1",
+          "rainbow_red": "#BF616A",
+          "rainbow_orange": "#D08770",
+          "rainbow_yellow": "#EBCB8B",
+          "rainbow_green": "#A3BE8C",
+          "rainbow_blue": "#88C0D0",
+          "rainbow_indigo": "#5E81AC",
+          "rainbow_violet": "#B48EAD",
+          "rainbow_red_shimmer": "#D08B8F",
+          "rainbow_orange_shimmer": "#E5A890",
+          "rainbow_yellow_shimmer": "#F2DBA5",
+          "rainbow_green_shimmer": "#BED4AC",
+          "rainbow_blue_shimmer": "#A8D0DC",
+          "rainbow_indigo_shimmer": "#81A1C1",
+          "rainbow_violet_shimmer": "#D4AEC8",
+          "clawd_body": "#D08770",
+          "clawd_background": "#2E3440",
+          "userMessageBackground": "#2E3440",
+          "bashMessageBackgroundColor": "#434C5E",
+          "memoryBackgroundColor": "#3B4252",
+          "rate_limit_fill": "#88C0D0",
+          "rate_limit_empty": "#4C566A"
         }
       },
       {
@@ -406,77 +475,10 @@
           "rate_limit_fill": "rgb(153,204,255)",
           "rate_limit_empty": "rgb(69,92,115)"
         }
-      },
-      {
-        "name": "Nord",
-        "id": "nord",
-        "colors": {
-          "autoAccept": "#D08770",
-          "bashBorder": "#A3BE8C",
-          "claude": "rgb(143,188,187)",
-          "claudeShimmer": "#8FBCBB",
-          "claudeBlue_FOR_SYSTEM_SPINNER": "#5E81AC",
-          "claudeBlueShimmer_FOR_SYSTEM_SPINNER": "#81A1C1",
-          "permission": "#5E81AC",
-          "permissionShimmer": "#81A1C1",
-          "planMode": "#88C0D0",
-          "ide": "#88C0D0",
-          "promptBorder": "#434C5E",
-          "promptBorderShimmer": "#4C566A",
-          "text": "#ECEFF4",
-          "inverseText": "#2E3440",
-          "inactive": "#D8DEE9",
-          "subtle": "#4C566A",
-          "suggestion": "#88C0D0",
-          "remember": "#B48EAD",
-          "background": "#88C0D0",
-          "success": "#A3BE8C",
-          "error": "#BF616A",
-          "warning": "#EBCB8B",
-          "warningShimmer": "#F0D49B",
-          "diffAdded": "#3D4A42",
-          "diffRemoved": "#4A3D3F",
-          "diffAddedDimmed": "#333A35",
-          "diffRemovedDimmed": "#3A3335",
-          "diffAddedWord": "rgb(128,165,95)",
-          "diffRemovedWord": "#BF616A",
-          "diffAddedWordDimmed": "rgb(108,167,166)",
-          "diffRemovedWordDimmed": "rgb(201,116,89)",
-          "red_FOR_SUBAGENTS_ONLY": "#BF616A",
-          "blue_FOR_SUBAGENTS_ONLY": "#5E81AC",
-          "green_FOR_SUBAGENTS_ONLY": "#A3BE8C",
-          "yellow_FOR_SUBAGENTS_ONLY": "#EBCB8B",
-          "purple_FOR_SUBAGENTS_ONLY": "#B48EAD",
-          "orange_FOR_SUBAGENTS_ONLY": "#D08770",
-          "pink_FOR_SUBAGENTS_ONLY": "#B48EAD",
-          "cyan_FOR_SUBAGENTS_ONLY": "#88C0D0",
-          "professionalBlue": "#81A1C1",
-          "rainbow_red": "#BF616A",
-          "rainbow_orange": "#D08770",
-          "rainbow_yellow": "#EBCB8B",
-          "rainbow_green": "#A3BE8C",
-          "rainbow_blue": "#88C0D0",
-          "rainbow_indigo": "#5E81AC",
-          "rainbow_violet": "#B48EAD",
-          "rainbow_red_shimmer": "#D08B8F",
-          "rainbow_orange_shimmer": "#E5A890",
-          "rainbow_yellow_shimmer": "#F2DBA5",
-          "rainbow_green_shimmer": "#BED4AC",
-          "rainbow_blue_shimmer": "#A8D0DC",
-          "rainbow_indigo_shimmer": "#81A1C1",
-          "rainbow_violet_shimmer": "#D4AEC8",
-          "clawd_body": "#D08770",
-          "clawd_background": "#2E3440",
-          "userMessageBackground": "#2E3440",
-          "bashMessageBackgroundColor": "#434C5E",
-          "memoryBackgroundColor": "#3B4252",
-          "rate_limit_fill": "#88C0D0",
-          "rate_limit_empty": "#4C566A"
-        }
       }
     ],
     "launchText": {
-      "method": "custom",
+      "method": "figlet",
       "figletText": "Claude Code",
       "figletFont": "ANSI Shadow",
       "customText": ""
@@ -722,7 +724,7 @@
       ]
     },
     "thinkingStyle": {
-      "updateInterval": 140,
+      "updateInterval": 120,
       "phases": [
         "◐",
         "◓",
