feat(mcpproxy): add launchd service integration and improve automation
- Add launchd plist for automatic mcpproxy startup and crash recovery
- Add launchd-control.sh for robust service management
- Improve fix-mcpproxy.sh with health checks and graceful shutdown
- Add web UI API key reset functionality
- Update .gitignore to exclude mcpproxy database and backup files
- Enhance zombie process detection with better filtering

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ fish/fishd.tmp*
 tweakcc/cli.js.backup
 karabiner/automatic_backups
 .gemini-clipboard
+mcpproxy/config.db
+mcpproxy/config.db.backup*
