feat(goose): introduce goose framework flags documentation

--- a/glance/glance.yml
+++ b/glance/glance.yml
@@ -198,6 +198,7 @@ pages:
               - neovide/neovide
               - neovim/neovim
               - yarlson/lnk
+              - anthropics/claude-code
               - Haleclipse/CCometixLine
               - Piebald-AI/tweakcc
 
